app/guid-file/styles.scss
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.FileDetail_container {
    height: 100%;
    width: 100%;
    display: inline-flex;
    flex-direction: row;
    align-content: flex-start;

    &.Mobile {
        padding: 0;
        margin: 0;
        max-height: 100vh;
        max-width: 100vw;
        display: flex;
        flex-direction: column-reverse;
        justify-content: flex-start;
    }
}

.FileDetail_leftPanel {
    height: 100%;
    display: inline-flex;
    flex-direction: row;
    justify-content: flex-start;

    &.Mobile {
        width: 100vw;
        flex-direction: column;
        justify-content: flex-start;
        padding: 0;
        margin: 0;
        order: 2;
    }
}

.FileDetail_main {
    height: 100%;
    width: 100%;
    padding-left: 0;
    margin-left: 0;
    display: flex;
    flex-direction: column;
    align-content: flex-start;
    justify-content: flex-start;

    &.Mobile {
        max-height: 100vh;
        max-width: 100vw;
    }
}

.FileDetail_project_link_div {
    display: flex;
    flex-direction: row;
}

.FileDetail_project_link {
    display: flex;
    flex-direction: row;
    align-items: flex-start;

    &.Mobile {
        width: 90vw;
        flex-wrap: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }
}

.FileDetail_project-link h3 {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    font-weight: 900;

    &.Mobile {
        max-width: 90vw;
        flex-wrap: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }
}

.FileDetail_file-project-h3 {
    width: 100%;

    &.Mobile {
        max-width: 90vw;
        text-overflow: ellipsis;
        flex-wrap: nowrap;
        overflow: hidden;
        white-space: nowrap;
    }
}

.FileDetail_file-name {
    padding-left: 3px;
    font-weight: 900;

    &.Mobile {
        flex-wrap: wrap;
    }
}

.FileDetail_filename-buttons {
    display: inline-flex;
    flex-direction: row;
    align-content: flex-start;
}

.FileDetail_dropdown-list {
    display: inline-block;
    flex-direction: column;
}

.FileDetail_main-download-button button {
    padding: 0;
    margin: 0;
    color: #337ab7;
    background-color: #fff;
    border-radius: 0;
    height: 20px;
    width: 90px;
    font-size: 14px;
    text-align: left;
}

.FileDetail_dropdown-trigger-button {

    display: flex;
    justify-content: flex-end;
}

.FileDetail_main-download-button button:hover {
    color: #000;
    background-color: #fff;
    text-decoration: none;
}

.FileDetail_main-share-button button {
    padding: 0;
    margin: 0;
    color: #337ab7;
    background-color: #fff;
    border-radius: 0;
    height: 20px;
    width: 90px;
    font-size: 14px;
    text-align: left;
}

.FileDetail_main-share-button button:hover {
    color: #000;
    background-color: #fff;
    text-decoration: none;
}

.FileDetail-file-render {
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    padding-top: 10px;
    border: 10px 5px solid rgba(110, 110, 110, 0.3);

    &.Mobile {
        padding-top: 90px;
        order: 4;
    }
}

.FileDetail_navbar-right {
    height: 100%;
    display: inline-flex;
    flex-direction: column;
    margin-top: 64px;
    border-left: 1px solid rgba(102, 102, 102, 0.3);
    transition: 0.4s;
    z-index: 1;
    text-align: center;

    &.Mobile {
        padding: 0;
        margin: 0;
        display: inline-flex;
        flex-direction: row;
        border-left: 0 solid transparent;
        border-top: 1px solid rgba(102, 102, 102, 0.3);
        padding-top: 6px;
        justify-content: space-evenly;
        overflow: hidden;
        position: fixed;
        left: 0;
        top: 154px;
        width: 100%;
        text-align: center;
    }
}

.FileDetail_navbar-buttons {
    display: flex;
    flex-direction: column;

    &.Mobile {
        display: flex;
        flex-direction: row;
        justify-content: stretch;
    }
}

.FilesDetail_Tags-slide {
    height: 100%;
    width: 0;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    transition: 0.4s ease-out;
    padding-left: 50px;
    margin-left: 50px;

    &.Mobile {
        padding: 0;
        margin: 0;
        max-height: 30vh;
        max-width: 90vw;
        justify-content: left;
    }
}

.FilesDetail_Tags-slide:focus-visible {
    border-left: 1px solid rgba(102, 102, 102, 0.3);

    &.Mobile {
        border-left: 0 solid transparent;
        border-top: 1px solid rgba(102, 102, 102, 0.3);
    }
}

.FilesDetail_Tags-slide-close {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    &.Mobile {
        justify-content: flex-start;
    }
}

.FilesDetail_Version-slide {
    height: 100%;
    width: 0;
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
    transition: 0.4s ease-out;
    text-align: left;
    padding-left: 50px;
    margin-left: 50px;

    &.Mobile {
        padding: 0;
        margin: 0;
        max-height: 30vh;
        max-width: 90vw;
        justify-content: left;
    }
}

.FilesDetail_Version-slide:focus-visible {
    border-left: 1px solid rgba(102, 102, 102, 0.3);

    &.Mobile {
        border-left: 0 solid transparent;
        border-top: 1px solid rgba(102, 102, 102, 0.3);
    }
}

.FilesDetail_Version-slide-close {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    &.Mobile {
        justify-content: flex-start;
    }
}

.FileDetail-navbar-buttons button {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    align-content: space-between;
    text-align: center;
    height: 40px;
    width: 50px;
    border: solid 2px transparent;
    vertical-align: center;
    border-radius: 2px;
    padding-bottom: 25px;

    &.Mobile {
        display: inline-block;
        position: relative;
        // position: -webkit-sticky;
        // position: sticky;
        // top: 60px;
    }
}

.FilesDetail_versions-button-div button {
    color: #337ab7;
    background-color: #fff;
    margin-bottom: 10px;
    text-decoration: none;
    border: 1px solid transparent;
    border-radius: 0;

    &.Mobile {
        display: inline-block;
        position: relative;
        margin-right: 30px;
        // position: -webkit-sticky;
        // position: sticky;
        // top: 60px;
    }
}

.FilesDetail_versions-button button:hover {
    color: #000;
    background-color: #337ab7;
}

.FilesDetail_tags-button-div button {
    color: #337ab7;
    background-color: #fff;
    text-decoration: none;
    border: 1px solid transparent;
    border-radius: 0;

    &.Mobile {
        display: inline-block;
        position: relative;
        margin-left: 30px;
        // position: -webkit-sticky;
        // position: sticky;
        // top: 60px;
    }
}

.FilesDetail_tags-button button:hover {
    color: #000;
    background-color: #337ab7;
}

